test/regression/Output/2014-07-04-unflushed-error-report.c.tmp.klee-out/test000001.pc
array shift_amount1[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Ult (ZExt w64 (ReadLSB w32 0 shift_amount1))
                  32))]
        false)
